<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <!-- Home -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.danzygram.fragments.HomeFragment"
        android:label="@string/nav_home" />

    <!-- Search -->
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.danzygram.fragments.SearchFragment"
        android:label="@string/nav_search" />

    <!-- Upload -->
    <fragment
        android:id="@+id/uploadFragment"
        android:name="com.example.danzygram.fragments.UploadFragment"
        android:label="@string/nav_upload" />

    <!-- Profile -->
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.danzygram.fragments.ProfileFragment"
        android:label="@string/nav_profile" />

    <!-- Edit Profile -->
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.danzygram.fragments.EditProfileFragment"
        android:label="@string/edit_profile" />

</navigation>